--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title></title>
+  <script src="https://kit.fontawesome.com/36e38d6b14.js" crossorigin="anonymous"></script>
+  <title>Platzi Conf Merch</title>
 </head>
 <body>
   <div id="app"></div>
