[add] configuracion par pwa

--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,26 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://kit.fontawesome.com/36e38d6b14.js" crossorigin="anonymous"></script>
+  <link rel='manifest' href='/manifest.json' />
   <title>Platzi Conf Merch</title>
 </head>
 <body>
   <div id="app"></div>
+
+  <script>
+    if('serviceWorker' in navigator) {
+      window.addEventListener('load', function () {
+        navigator.serviceWorker.register('service-worker.js').then(function (registrstion) {
+          console.log('ServiceWorker registration succesful with scope: ', registrstion.scope)
+        }, function (err) {
+          console.log('ServiceWorker registration failde: ', err)
+        }).catch(function (err) {
+          console.log(err)
+        })
+      })
+    } else {
+      console.log('Service Worker is not supported')
+    }
+  </script>
 </body>
 </html>
